# Blokus

./: .gitignore  Blokus.depend  README.md  algorithms.h  blokus.mdj  board.cpp  board.h  boardrules.cpp  computerplayer.cpp  main.cpp  meson.build  move.cpp  move.h  piece.cpp  piece.h  player.cpp  player.h  playerpieces.cpp  smartplayer.cpp  smartplayer.h  square.cpp  square.h
instructions/: Deliverable 1 Instructions (2).pdf:Zone.Identifier
